--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,18 @@
 {
-	"name": "laravel/laravel",
-	"description": "The Laravel Framework.",
-	"keywords": ["framework", "laravel"],
+	"name": "scriptotek/42",
+	"description": "42-prosjektet.",
+	"keywords": [],
+	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.0.*",
+		"laravel/framework": "4.1.*",
 		"way/generators": "dev-master",
-		"loic-sharma/profiler": "dev-master"
+		"loic-sharma/profiler": "dev-master",
+		"danmichaelo/simplemarcparser": "dev-master",
+		"danmichaelo/quitesimplexmlelement": "dev-master"
 	},
-    "require-dev": {
-        "phpunit/phpunit": "3.7.*"
-    },
+	"require-dev": {
+		"phpunit/phpunit": "3.7.*"
+	},
 	"autoload": {
 		"classmap": [
 			"app/commands",
@@ -22,12 +25,11 @@
 	},
 	"scripts": {
 		"post-install-cmd": [
+			"php artisan clear-compiled",
 			"php artisan optimize"
 		],
-		"pre-update-cmd": [
-			"php artisan clear-compiled"
-		],
 		"post-update-cmd": [
+			"php artisan clear-compiled",
 			"php artisan optimize"
 		],
 		"post-create-project-cmd": [
